[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/Base_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Scripts/Interface.gd" type="Script" id=2]
[ext_resource path="res://Resources/Interface_font.tres" type="DynamicFont" id=3]

[node name="Interface" type="Node2D"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 1031.0
margin_bottom = 767.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsLabel" type="Label" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -299.5
margin_top = 13.0
margin_right = 299.5
margin_bottom = 103.0
custom_fonts/font = ExtResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HiscoreLabel" type="Label" parent="Control"]
margin_left = 24.0
margin_top = 16.0
margin_right = 264.0
margin_bottom = 83.0
custom_fonts/font = ExtResource( 3 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartPos" type="Position2D" parent="."]
position = Vector2( 988, 38 )
